--- a/src/content/lessen/wiskunde/rekenen_rationaal/komma_naar_breuk/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/komma_naar_breuk/index.mdx
@@ -23,9 +23,11 @@ $$
 
 Dat ziet er inderdaad pittig uit! 🥴 Je zou kunnen proberen om te beginnen cijferen, maar dat zal heel wat moeite kosten en bij zo'n lastige berekening is een foutje snel gemaakt.
 
-Naast vermenigvuldigingen, zijn ook delingen, machten en wortels vaak **veel eenvoudiger te berekenen met breuken dan met kommagetallen**. Een laatste voordeel van breuken is dat je die <Mute>(in tegenstelling tot kommagetallen)</Mute> niet hoeft af te ronden, waardoor je **afrondingsfouten vermijdt**. Redenen genoeg dus om een kommagetal te kunnen omzetten naar een breuk!
+Naast vermenigvuldigingen, zijn ook delingen, machten en wortels vaak **veel eenvoudiger te berekenen met breuken dan met kommagetallen**.
 
-In deze les leggen we uit hoe je dat kan aanpakken. In de eerste paragraaf tonen we de **verschillende vormen waarin een kommagetal kan voorkomen**. In de paragrafen nadien leggen we **voor elk van deze vormen uit hoe je die kan omzetten** naar een breuk. In de laatste paragraaf leggen we je uit hoe je **met behulp van het rekentoestel** een kommagetal kan omzetten naar een breuk.
+Een laatste voordeel van breuken is dat je die <Mute>(in tegenstelling tot kommagetallen)</Mute> niet hoeft af te ronden, waardoor je **afrondingsfouten vermijdt**.
+
+Redenen genoeg dus om een kommagetal te kunnen omzetten naar een breuk! In deze les leggen we uit hoe je dat kan aanpakken. In de eerste paragraaf tonen we de **verschillende vormen waarin een kommagetal kan voorkomen**. In de paragrafen nadien leggen we **voor elk van deze vormen uit hoe je die kan omzetten** naar een breuk. In de laatste paragraaf leggen we je uit hoe je **met behulp van het rekentoestel** een kommagetal kan omzetten naar een breuk.
 
 ## Begrensde en onbegrensde decimale vormen
 
@@ -34,20 +36,22 @@ Er bestaan twee soorten kommagetallen: kommagetallen met een **begrensde decimal
 Een kommagetal met een **begrensde decimale vorm** is een getal dat een **eindig aantal cijfers na de komma** heeft. <Mute>(Na het laatste cijfer volgen eigenlijk oneindig veel nullen, maar die laten we buiten beschouwing.)</Mute> Enkele voorbeelden:
 
 $$
-0{,}6\\
--2{,}81\\
-35{,}1\\
-6{,}09
+\begin{aligned}
+0{&,}6\\
+-2{&,}81\\
+35{&,}1\\
+6{&,}09
+\end{aligned}
 $$
 
 Een kommagetal van **onbegrensde decimale vorm** is een getal dat **oneindig veel cijfers na de komma** heeft <Mute>(waarvan de laatste cijfers niet allemaal gelijk zijn aan nul)</Mute>. Enkele voorbeelden:
 
 $$
-  2{,}333333333\ldots\\
--12{,}764646464\ldots\\
-  3{,}141592653\ldots\\
-  1{,}414213562\ldots\\
-  0{,}000525252\ldots
+  2{&,}333333333\ldots\\
+-12{&,}764646464\ldots\\
+  3{&,}141592653\ldots\\
+  1{&,}414213562\ldots\\
+  0{&,}000525252\ldots
 $$
 
 Het valt je hierboven misschien op dat er in sommige voorbeelden **decimalen zijn die zich herhalen**:
@@ -64,26 +68,142 @@ $$
 
 Wanneer **decimalen zich blijvend herhalen**, zeggen we dat het kommagetal een **onbegrensde repeterende decimale vorm** heeft <Mute>(repeterend, dus herhalend)</Mute>. De decimalen die zich herhalen, noemen we de **periode**.
 
-Kommagetallen die een onbegrensde niet-repeterende decimale vorm hebben, zoals $3{,}141592653\ldots$, kun je **niet** schrijven als een breuk van gehele getallen. Dat zijn **irrational getallen** en die behoren niet tot de verzameling $\mathbb{Q}$. Voorbeelden van zulke getallen zijn $\pi$ en $\sqrt{2}$.
+| Kommagetal                 | Periode  |
+|----------------------------|----------|
+| $$2{,}333333333\ldots$$    |  $$3$$   |
+| $$-12{,}764646464\ldots$$  | $$64$$   |
+| $$3{,}141592653\ldots$$    | **GEEN** |
+| $$1{,}414213562\ldots$$    | **GEEN** |
+| $$0{,}000525252\ldots$$    | $$52$$   |
 
-In de volgende paragrafen leren we hoe je kommagetallen van **begrensde decimale vorm** en van **onbegrensde repeterende decimale vorm** kan omzetten 
+Kommagetallen die een **onbegrensde niet-repeterende** decimale vorm hebben, zoals $3{,}141592653\ldots$, hebben **geen periode** en kun je **niet schrijven als een breuk** van gehele getallen. Dat zijn **irrational getallen** en die behoren niet tot de verzameling $\mathbb{Q}$. Voorbeelden van zulke getallen zijn $\pi$ en $\sqrt{2}$. We zeggen bv. dat
+
+$$
+\sqrt{2}\notin\mathbb{Q}
+$$
+
+In de volgende paragrafen leren we hoe je kommagetallen van **begrensde decimale vorm** en van **onbegrensde repeterende decimale vorm** kan omzetten naar een breuk van gehele getallen.
 
 ## Begrensde decimale vorm omzetten naar breuk
 
+De eenvoudigste omzetting van een kommagetal naar een breuk, is wanneer het kommagetal een **begrensde decimale vorm** heeft. Dat doe je in drie stappen:
+
+1. Zet het getal op **noemer $1$**.
+2. Vermenigvuldig teller en noemer met een **macht van $10$** zodat er **geen komma meer in de teller staat**.
+3. **Vereenvoudig** de breuk.
+
+Enkele voorbeelden:
+
+$$
+\begin{aligned}
+0{,}6
+&= \frac{0{,}6}{1}\\
+&= \frac{0{,}6\orange{\cdot 10}}{1\orange{\cdot 10}}\\
+&= \frac{6}{10}\\
+&= \frac{3}{5}\\
+\\
+-4{,}86
+&= \frac{-4{,}86}{1}\\
+&= \frac{-4{,}86\orange{\cdot 100}}{1\orange{\cdot 100}}\\
+&= \frac{-486}{100}\\
+&= \frac{-243}{50}\\
+\\
+16{,}5
+&= \frac{16{,}5}{1}\\
+&= \frac{16{,}5\orange{\cdot 10}}{1\orange{\cdot 10}}\\
+&= \frac{165}{10}\\
+&= \frac{33}{2}\\
+\\
+0{,}004
+&= \frac{0{,}004}{1}\\
+&= \frac{0{,}004\orange{\cdot 1000}}{1\orange{\cdot 1000}}\\
+&= \frac{4}{1000}\\
+&= \frac{1}{250}\\  
+\end{aligned}
+$$
+
+
 ## Onbegrensde repeterende decimale vorm omzetten naar breuk
+
+In het stappenplan dat we zo meteen zullen leren om een kommagetal met onbegrensde repeterende decimale vorm om te zetten naar een breuk, gaan we een **opmerkelijk wiskundig trucje** gebruiken. Met volgende voorbeelden zal je al een idee krijgen van wat dat trucje is. Geef volgende voorbeelden zeker eens in in je rekenmachine om de uitkomsten met je eigen ogen te zien!
+
+$$
+\begin{aligned}
+\frac{1}{9} &= 0{,}11111111\ldots\\ 
+\frac{2}{9} &= 0{,}22222222\ldots\\
+\frac{8}{9} &= 0{,}88888888\ldots\\ 
+\frac{62}{99} &= 0{,}62626262\ldots\\
+\frac{25}{99} &= 0{,}2525252525\ldots\\
+\frac{34}{99} &= 0{,}3434343434\ldots\\
+\frac{736}{999} &= 0{,}7367367367\ldots\\
+\frac{102}{999} &= 0{,}1021021021\ldots\\
+\frac{845}{999} &= 0{,}8458458458\ldots\\
+\end{aligned}
+$$
+
+Je ziet dat wanneer we willen dat een bepaald getal zich telkens na de komma, we dat getal kunnen delen door een getal dat **even lang** is, maar **enkel het cijfer $9$ bevat**. Merk op dat wanneer we ons getal met de negens *langer* maken, er nulletjes *vóór* het getal tevoorschijn komen in de periode:
+
+$$
+\begin{aligned}
+\frac{8}{99} &= 0{,}0808080808\ldots\\
+\frac{6}{999} &= 0{,}0060060060\ldots\\
+\frac{47}{999} &= 0{,}0470470470\ldots\\
+\frac{51}{9999} &= 0{,}005100510051\ldots\\
+\end{aligned}
+$$
+
+Nu we dit weten, kunnen we al bepaalde kommagetallen met een onbegrensde repeterende decimale vorm omzetten, bijvoorbeeld:
+
+$$
+\begin{aligned}
+0{,}93939393\ldots &= \frac{93}{99}\\
+&= \frac{31}{33}\\
+\\
+0{,}44444444\ldots &= \frac{4}{9}\\
+\\
+0{,}02302323\ldots &= \frac{23}{999}
+\end{aligned}
+$$
+
+Maar wat nu als het repeterende deel voorafgegaan wordt door een reeks nullen? Bijvoorbeeld:
+
+$$
+\begin{aligned}
+0&{,}003333333\ldots\\
+0&{,}000028282828\ldots\\
+0&{,}072727272727\ldots
+\end{aligned}
+$$
+
+Daar kunnen we geraken door onze breuk te vermenigvuldigen met $\frac{1}{10}$, $\frac{1}{100}$, $\frac{1}{1000}$,... afhankelijk van hoeveel nullen voorafgaan aan het repeterende deel:
+
+$$
+\begin{aligned}
+0{,}\orange{00}3333333\ldots
+&= 0{,}333333333\ldots\cdot\frac{1}{1\orange{00}}\\
+&= \frac{3}{9}\cdot\frac{1}{100}\\
+&= \frac{1}{3}\cdot\frac{1}{100}\\
+&= \frac{1}{300}
+\\
+0{,}\orange{0000}28282828\ldots
+&= 0{,}282828282828\ldots\cdot\frac{1}{\orange{10~000}}\\
+&= \frac{28}{99}\cdot\frac{1}{10~000}\\
+&= \frac{28}{990~000}\\
+\\
+0{,}\orange{0}72727272727\ldots
+&= 0{,}72727272727\ldots \cdot \frac{1}{1\orange{0}}\\
+&= \frac{72}{99}\cdot \frac{1}{10}\\
+&= \frac{8}{11}\cdot \frac{1}{10}\\
+&= \frac{8}{110}\\
+&= \frac{4}{55}
+\end{aligned}
+$$
 
 Zuiver repeterend vs. gemengd repeterend
 
-- Uit hoeveel cijfers bestaat één periode van de repeterende decimalen? $= p$
-- Hoeveel decimalen zijn er vóór de repeterende decimalen? $= d$
-
-1. Schrijf de cijfers tot **na** de eerste periode zonder komma.
-2. Schrijf de cijfers tot **vóór** de eerste periode zonder komma en trek dit getal af van het getal uit de vorige stap.
-3. Maak een getal door $p$ negens en $d$ nullen achter elkaar te schrijven en deel de uitkomst van de vorige stap door dit getal.
-
-
 1. Splits het kommagetal in een som van twee andere kommagetallen waarbij het ene kommagetal eindig is en het andere enkel de repeterende decimalen bevat (eventueel voorafgegaan door nullen).
-2. Zet het eerste kommagetal om door de methode uit vorige paragraaf. Schrijf de periode van het andere kommagetal in de noemer en deel door het getal dat bestaat uit $p$ negens en $d$ nullen.
+2. Zet het begrensde kommagetal om door de methode uit de vorige paragraaf.
+3. Schrijf de periode van het andere kommagetal in de noemer en deel door het getal dat bestaat uit $p$ negens en $d$ nullen.
 
 ## Vergelijkingen gebruiken om kommagetal om te zetten naar breuk
 
